--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -2,7 +2,7 @@ namespace: openshift-gitops
 
 resources:
   - cluster-config-project.yaml
-  # - ../../../02-cluster-config/01-openshift-gitops
+  - ../../../cluster-config/image-registry
   # - ../../../02-cluster-config/02-groups-and-membership
 #  - ../../../02-cluster-config/03-cluster-monitoring
 
