--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -3,6 +3,7 @@ namespace: openshift-gitops
 resources:
   - cluster-config-project.yaml
   - ../../../cluster-config/image-registry
+  - ../../../cluster-config/external-secrets-operator
   # - ../../../02-cluster-config/02-groups-and-membership
 #  - ../../../02-cluster-config/03-cluster-monitoring
 
