--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ creds.yaml
 gitops/catalog/openshift-cert-manager-operator/instances/route53/route53-creds-secret.yaml
 **/*.env
 **/*.secret
+bootstrap/homelab/init/external-secrets-operator/doppler-secret.yaml
