--- a/gitops/cluster-config/external-secrets-operator/kustomization.yaml
+++ b/gitops/cluster-config/external-secrets-operator/kustomization.yaml
@@ -4,3 +4,4 @@ commonAnnotations:
 resources:
   - github.com/redhat-cop/gitops-catalog/external-secrets-operator/operator/overlays/stable
   - github.com/redhat-cop/gitops-catalog/external-secrets-operator/instance/overlays/default
+  - cluster-secret-store.yaml
