--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - cluster-config-project.yaml
   - ../../../cluster-config/image-registry
   - ../../../cluster-config/external-secrets-operator
-  # - ../../../02-cluster-config/02-groups-and-membership
+  - ../../../cluster-config/openshift-oauth
 #  - ../../../02-cluster-config/03-cluster-monitoring
 
 
