--- a/gitops/cluster-config/openshift-oauth/htpasswd-external-secret.yaml
+++ b/gitops/cluster-config/openshift-oauth/htpasswd-external-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: htpasswd
+  namespace: openshift-config
 spec:
   refreshInterval: 1h
   secretStoreRef:
