--- a/gitops/cluster-config/openshift-oauth/htpasswd-external-secret.yaml
+++ b/gitops/cluster-config/openshift-oauth/htpasswd-external-secret.yaml
@@ -1,6 +1,8 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
   name: htpasswd
   namespace: openshift-config
 spec:
