Add groups and membership.

--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../../cluster-config/image-registry
   - ../../../cluster-config/external-secrets-operator
   - ../../../cluster-config/openshift-oauth
+  - ../../../cluster-config/groups-and-membership
 #  - ../../../02-cluster-config/03-cluster-monitoring
 
 
