--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ gitops/catalog/openshift-cert-manager-operator/instances/route53/route53-creds-s
 **/*.env
 **/*.secret
 bootstrap/homelab/init/external-secrets-operator/doppler-secret.yaml
+bootstrap/init/external-secrets-operator/doppler-secret.yaml
