--- a/gitops/argocd/clusters/local/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/local/cluster-config/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../../cluster-config/external-secrets-operator
   - ../../../cluster-config/openshift-oauth
   - ../../../cluster-config/groups-and-membership
+  - ../../../cluster-config/openshift-gitops/cluster
 #  - ../../../02-cluster-config/03-cluster-monitoring
 
 
