--- a/gitops/cluster-config/openshift-oauth/oauth-config.yaml
+++ b/gitops/cluster-config/openshift-oauth/oauth-config.yaml
@@ -22,7 +22,7 @@ spec:
           name: entraid
         claims: 
           preferredUsername:
-            - email
+            - upn
           name:
             - name
           email:
