Update pg with liveness/readiness/limits

--- a/gitops/cluster-config/keycloak/instance/postgresql-statefulset.yaml
+++ b/gitops/cluster-config/keycloak/instance/postgresql-statefulset.yaml
@@ -18,6 +18,29 @@ spec:
       containers:
         - name: postgresql-db
           image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:15-el9
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            exec:
+              command:
+              - /usr/libexec/check-container
+              - --live
+            failureThreshold: 3
+            initialDelaySeconds: 120
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 10
+          readinessProbe:
+            exec:
+              command:
+              - /usr/libexec/check-container
+            failureThreshold: 3
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          resources:
+            limits:
+              memory: 512Mi
           volumeMounts:
             - mountPath: /data
               name: postgresql-data
