--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ../../../cluster-config/openshift-oauth
   - ../../../cluster-config/groups-and-membership
   - ../../../cluster-config/keycloak/operator
+  - ../../../cluster-config/keycloak/instance
 #  - ../../../02-cluster-config/03-cluster-monitoring
 
 
