--- a/gitops/cluster-config/keycloak/instance/kustomization.yaml
+++ b/gitops/cluster-config/keycloak/instance/kustomization.yaml
@@ -1,6 +1,7 @@
 namespace: keycloak
 
 resources:
+  - keycloak-certificate.yaml
   - postgresql-pvc.yaml
   - postgresql-statefulset.yaml
   - postgresql-svc.yaml
