Add openshift default ingress for keycloak

--- a/gitops/cluster-config/keycloak/instance/keycloak.yaml
+++ b/gitops/cluster-config/keycloak/instance/keycloak.yaml
@@ -15,6 +15,8 @@ spec:
     passwordSecret:
       name: keycloak-creds
       key: POSTGRESQL_PASSWORD
+  ingress:
+    className: openshift-default
   http:
     tlsSecret: keycloak-cert
   hostname:
