--- a/gitops/argocd/clusters/local/bootstrap/bootstrap-application.yaml
+++ b/gitops/argocd/clusters/local/bootstrap/bootstrap-application.yaml
@@ -15,7 +15,7 @@ spec:
     targetRevision: main
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
     syncOptions:
       - ApplyOutOfSyncOnly=true
