--- a/gitops/argocd/cluster-config/keycloak/operator/keycloak-operator-application.yaml
+++ b/gitops/argocd/cluster-config/keycloak/operator/keycloak-operator-application.yaml
@@ -17,7 +17,7 @@ spec:
     targetRevision: main
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
     syncOptions:
       - ApplyOutOfSyncOnly=true
