--- a/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
@@ -2,7 +2,7 @@ namespace: openshift-gitops
 
 resources:
   - cluster-services-project.yaml
-  #- ../../../cluster-services/redhat-developer-hub/operator
+  - ../../../cluster-services/redhat-developer-hub/operator
 
 
 
