Adding labels to apps.

--- a/gitops/argocd/cluster-config/cert-manager/cert-manager-application.yaml
+++ b/gitops/argocd/cluster-config/cert-manager/cert-manager-application.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "21"
   labels:
     gitops.ownedBy: openshift-gitops
+    app.type: operator
   name: cert-manager
 spec:
   destination:
