--- a/gitops/argocd/cluster-config/external-secrets-operator/external-secrets-operator-application.yaml
+++ b/gitops/argocd/cluster-config/external-secrets-operator/external-secrets-operator-application.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "20"
   labels:
     gitops.ownedBy: openshift-gitops
+    app.type: operator
   name: external-secrets-operator
 spec:
   destination:
