--- a/gitops/argocd/cluster-services/redhat-developer-hub/operator/rhdh-operator-application.yaml
+++ b/gitops/argocd/cluster-services/redhat-developer-hub/operator/rhdh-operator-application.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "300"
   labels:
     gitops.ownedBy: openshift-gitops
+    app.type: operator
   name: rhdh-operator
 spec:
   destination:
