--- a/gitops/argocd/cluster-config/groups-and-membership/groups-and-membership-application.yaml
+++ b/gitops/argocd/cluster-config/groups-and-membership/groups-and-membership-application.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "20"
   labels:
     gitops.ownedBy: openshift-gitops
+    app.type: cluster-config
   name: groups-and-membership
 spec:
   destination:
