--- a/gitops/argocd/cluster-config/image-registry/image-registry-application.yaml
+++ b/gitops/argocd/cluster-config/image-registry/image-registry-application.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "21"
   labels:
     gitops.ownedBy: openshift-gitops
+    app.type: cluster-config
   name: image-registry-config
 spec:
   destination:
