--- a/gitops/argocd/cluster-config/keycloak/instance/keycloak-application.yaml
+++ b/gitops/argocd/cluster-config/keycloak/instance/keycloak-application.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "26"
   labels:
     gitops.ownedBy: openshift-gitops
+    app.type: operator-instance
   name: keycloak
 spec:
   destination:
