--- a/gitops/argocd/cluster-config/openshift-oauth/openshift-oauth-application.yaml
+++ b/gitops/argocd/cluster-config/openshift-oauth/openshift-oauth-application.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "22"
   labels:
     gitops.ownedBy: openshift-gitops
+    app.type: cluster-config
   name: openshift-oauth-config
 spec:
   destination:
