--- a/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
@@ -3,6 +3,7 @@ namespace: openshift-gitops
 resources:
   - cluster-services-project.yaml
   - ../../../cluster-services/redhat-developer-hub/operator
+  - ../../../cluster-services/redhat-developer-hub/instance
 
 
 
