--- a/gitops/cluster-services/redhat-developer-hub/instance/base/kustomization.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/base/kustomization.yaml
@@ -1,6 +1,6 @@
----
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+namespace: rhdh
 
 resources:
-  - backstage.yaml
+  - namespace.yaml
+  - rhdh-token-secret.yaml
+  - consolelink.yaml
