Add custom role

--- a/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
@@ -2,8 +2,8 @@ namespace: openshift-gitops
 
 resources:
   - cluster-services-project.yaml
-  - ../../../cluster-services/redhat-developer-hub/operator
-  - ../../../cluster-services/redhat-developer-hub/instance
+  # - ../../../cluster-services/redhat-developer-hub/operator
+  # - ../../../cluster-services/redhat-developer-hub/instance
 
 
 
