--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/github/dynamic-plugins-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/github/dynamic-plugins-rhdh.yaml
@@ -1,6 +1,8 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   name: dynamic-plugins-rhdh
 data:
   dynamic-plugins.yaml: |
