--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -2,6 +2,7 @@ namespace: openshift-gitops
 
 resources:
   - cluster-config-project.yaml
+  - ../../../cluster-config/custom-roles
   - ../../../cluster-config/external-secrets-operator
   - ../../../cluster-config/cert-manager
   - ../../../cluster-config/openshift-gitops/cluster
