--- a/gitops/cluster-config/openshift-storage/operator/base/subscription.yaml
+++ b/gitops/cluster-config/openshift-storage/operator/base/subscription.yaml
@@ -8,5 +8,5 @@ spec:
   name: odf-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  channel: "stable-4.16"
+  channel: PATCH_ME
   installPlanApproval: Automatic
