--- a/gitops/cluster-config/openshift-storage/operator/base/kustomization.yaml
+++ b/gitops/cluster-config/openshift-storage/operator/base/kustomization.yaml
@@ -4,6 +4,7 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
-  - namespace.yaml.yaml
+  # This namespace already exists when cluster created with Assisted Installer
+  #- namespace.yaml.yaml
   - operatorgroup.yaml
   - subscription.yaml
