Further restrict noobaa resources.

--- a/gitops/cluster-config/openshift-storage/mcg/mcg.yaml
+++ b/gitops/cluster-config/openshift-storage/mcg/mcg.yaml
@@ -31,13 +31,13 @@ spec:
     reconcileStrategy: standalone
     disableLoadBalancerService: true
   resources:
-    # noobaa-core:
-    #   limits:
-    #     cpu: "2"
-    #     memory: "4Gi"
-    #   requests:
-    #     cpu: "1"
-    #     memory: "2Gi"
+    noobaa-core:
+      limits:
+        cpu: "2"
+        memory: "2Gi"
+      requests:
+        cpu: "1"
+        memory: "2Gi"
     noobaa-db:
       limits:
         cpu: "2"
@@ -45,10 +45,10 @@ spec:
       requests:
         cpu: "1"
         memory: "2Gi"
-    # noobaa-endpoint:
-    #   limits:
-    #     cpu: "2"
-    #     memory: 4Gi
-    #   requests:
-    #     cpu: "1"
-    #     memory: 2Gi
+    noobaa-endpoint:
+      limits:
+        cpu: "2"
+        memory: 2Gi
+      requests:
+        cpu: "500m"
+        memory: 2Gi
