--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/github/dynamic-plugins-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/github/dynamic-plugins-rhdh.yaml
@@ -21,3 +21,7 @@ data:
         disabled: false
       - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-tekton
         disabled: false
+      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-analytics-provider-segment 
+        disabled: false
+      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic 
+        disabled: false
