--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/github/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/github/app-config-rhdh.yaml
@@ -10,10 +10,41 @@ data:
       title: Pitt Lab IDP
       baseUrl: https://backstage-developer-hub-rhdh.apps.lab.pitt.ca
       
+    # auth:
+    #   providers:
+    #     guest:
+    #       dangerouslyAllowOutsideDevelopment: true
+
     auth:
+      environment: production
+      session:
+        secret: ${BACKEND_AUTH_SECRET}
       providers:
-        guest:
-          dangerouslyAllowOutsideDevelopment: true
+        oidc:
+          production:
+            metadataUrl: ${KEYCLOAK_BASE_URL}/realms/${KEYCLOAK_REALM} #${AUTH_OIDC_METADATA_URL}
+            clientId: ${KEYCLOAK_CLIENTID}
+            clientSecret: ${KEYCLOAK_CLIENTSECRET}
+            prompt: ${AUTH_OIDC_PROMPT} 
+            signIn:
+              resolvers:
+                - resolver: preferredUsernameMatchingUserEntityName
+    signInPage: oidc
+
+    catalog:
+     providers:
+       keycloakOrg:
+         production:
+           baseUrl: ${KEYCLOAK_BASE_URL}
+           loginRealm: ${KEYCLOAK_REALM}
+           realm: ${KEYCLOAK_REALM}
+           clientId: ${KEYCLOAK_CLIENTID}
+           clientSecret: ${KEYCLOAK_CLIENTSECRET}
+           schedule:
+            frequency: { minutes: 1 }
+            timeout: { minutes: 1 }
+            initialDelay: { seconds: 15 }
+
 
     backend:
       auth:
