--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/basic/kustomization.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/basic/kustomization.yaml
@@ -1,5 +1,6 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+namespace: rhdh
 
 resources:
   - ../../base
+  - app-config-rhdh.yaml
+  - backstage.yaml
