--- a/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
@@ -4,6 +4,5 @@ resources:
   - cluster-services-project.yaml
   - ../../../cluster-services/redhat-developer-hub/operator
   - ../../../cluster-services/redhat-developer-hub/instance
-
-
-
+  - ../../../cluster-services/devspaces/operator
+  - ../../../cluster-services/devspaces/instance
