--- a/gitops/cluster-config/cost-management/instance/overlays/homelab/kustomization.yaml
+++ b/gitops/cluster-config/cost-management/instance/overlays/homelab/kustomization.yaml
@@ -1,7 +1,7 @@
 namespace: costmanagement-metrics-operator
 
 resources:
-  - ../../../base/instance
+  - ../../base/instance
 
 patches:
   - patch: |-
