--- a/gitops/cluster-config/keycloak/operator/base/namespace.yaml
+++ b/gitops/cluster-config/keycloak/operator/base/namespace.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  labels:
+    insights_cost_management_optimizations: "true"
   annotations:
     openshift.io/description: "Red Hat build of Keycloak"
     openshift.io/display-name: "Red Hat build of Keycloak"
