--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/dynamic-plugins-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/dynamic-plugins-rhdh.yaml
@@ -23,5 +23,11 @@ data:
         disabled: false
       - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-analytics-provider-segment 
         disabled: false
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic 
+      - package: ./dynamic-plugins/dist/backstage-plugin-azure-devops 
         disabled: false
+      - package: ./dynamic-plugins/dist/backstage-plugin-azure-devops-backend-dynamic 
+        disabled: false
+      - package: ./dynamic-plugins/dist/parfuemerie-douglas-scaffolder-backend-module-azure-repositories
+        disabled:false
+      # - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic 
+      #   disabled: false
