--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
@@ -10,7 +10,7 @@ spec:
       mountPath: /opt/app-root/src
       configMaps:
         - name: app-config-rhdh
-    # dynamicPluginsConfigMapName: dynamic-plugins-rhdh
+    dynamicPluginsConfigMapName: dynamic-plugins-rhdh
     extraEnvs:
       secrets:
         - name: rhdh-secrets
