--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/secret-job.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/secret-job.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
-  name: create-gitea-org
+  name: default-backstage-secrets
 spec:
   template:
     spec:
@@ -26,7 +26,7 @@ spec:
 
               echo "Done"
           imagePullPolicy: Always
-          name: create-gitea-org
+          name: default-backstage-secrets
       dnsPolicy: ClusterFirst
       restartPolicy: OnFailure
       terminationGracePeriodSeconds: 30
