Fixed plugins file

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/secret-job.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/secret-job.yaml
@@ -16,11 +16,10 @@ spec:
               echo "Create a Red Hat org. Wait 2min for Gitea to fully init."
 
               oc create secret generic rhdh-secrets  \
-                --from-literal=BACKEND_AUTH_SECRET=abc123 \
                 --from-literal=ARGOCD_ADMIN_USER=admin \
                 --from-literal=ARGOCD_ADMIN_PASSWORD=$(oc extract secret/openshift-gitops-cluster -n openshift-gitops --to=-) \
-                --from-literal=K8S_CLUSTER_NAME=openshiftlocal \
-                --from-literal=K8S_CLUSTER_URL=https://api.crc.testing:6443 \
+                --from-literal=K8S_CLUSTER_NAME=homelab \
+                --from-literal=K8S_CLUSTER_URL=https://api.lab.pitt.ca:6443 \
                 --from-literal=K8S_CLUSTER_TOKEN=$(oc get secret rhdh-token -n rhdh -o jsonpath="{.data['token']}" | base64 -d) \
                 -n rhdh
 
