Update azure integration

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -70,7 +70,15 @@ data:
       azure:
         - host: dev.azure.com
           credentials:
-            - personalAccessToken: ${PERSONAL_ACCESS_TOKEN}
+            - clientId: ${AZURE_CLIENT_ID}
+              clientSecret: ${AZURE_CLIENT_SECRET}
+              tenantId: ${AZURE_TENANT_ID}
+
+    # integrations:
+    #   azure:
+    #     - host: dev.azure.com
+    #       credentials:
+    #         - personalAccessToken: ${PERSONAL_ACCESS_TOKEN}
 
     catalog:
       rules:
