--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -3,6 +3,7 @@ namespace: openshift-gitops
 resources:
   - cluster-config-project.yaml
   - ../../../cluster-config/kubeletconfig
+  - ../../../cluster-config/alertmanager
   - ../../../cluster-config/custom-roles
   - ../../../cluster-config/external-secrets-operator
   - ../../../cluster-config/cert-manager
