--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -15,8 +15,8 @@ resources:
   - ../../../cluster-config/image-registry
   - ../../../cluster-config/openshift-oauth
   - ../../../cluster-config/groups-and-membership
-  - ../../../cluster-config/keycloak/operator
-  - ../../../cluster-config/keycloak/instance
+  # - ../../../cluster-config/keycloak/operator
+  # - ../../../cluster-config/keycloak/instance
   - ../../../cluster-config/cost-management/operator
   - ../../../cluster-config/cost-management/instance
 #  - ../../../02-cluster-config/03-cluster-monitoring
