Change entraid to preferred_username

--- a/gitops/cluster-config/openshift-oauth/oauth-config.yaml
+++ b/gitops/cluster-config/openshift-oauth/oauth-config.yaml
@@ -22,7 +22,7 @@ spec:
           name: entraid
         claims: 
           preferredUsername:
-            - upn
+            - preferred_username
           name:
             - name
           email:
