--- a/gitops/cluster-config/openshift-oauth/oauth-config.yaml
+++ b/gitops/cluster-config/openshift-oauth/oauth-config.yaml
@@ -32,3 +32,29 @@ spec:
           email:
             - email
         issuer: https://login.microsoftonline.com/3b07ae55-7c3f-44ea-b8bd-03230c8aef4d/v2.0
+    - name: rhsso
+      mappingMethod: claim
+      type: OpenID
+      openID:
+        clientID: openshift
+        clientSecret: 
+          name: openid-client-secret
+        ca: 
+          name: openidcacrt
+        extraScopes: 
+        - email
+        - profile
+        extraAuthorizeParameters: 
+          include_granted_scopes: "true"
+        claims:
+          preferredUsername: 
+          - preferred_username
+          - email
+          name: 
+          - nickname
+          - given_name
+          - name
+          email: 
+          - custom_email_claim
+          - email
+        issuer: https://keycloak-sso.apps.lab.pitt.ca/auth/realms/homelab
