Add openshift virt

--- a/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
   - ../../../cluster-services/redhat-developer-hub/instance
   - ../../../cluster-services/devspaces/operator
   - ../../../cluster-services/devspaces/instance
+  - ../../../cluster-services/openshift-virt/operator
