--- a/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-services/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
   - ../../../cluster-services/devspaces/operator
   - ../../../cluster-services/devspaces/instance
   - ../../../cluster-services/openshift-virt/operator
+  - ../../../cluster-services/openshift-virt/instance
