--- a/gitops/argocd/clusters/sno/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/sno/cluster-config/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - ../../../cluster-config/cert-manager
   - ../../../cluster-config/openshift-gitops/cluster
   # - ../../../cluster-config/image-registry
-  # - ../../../cluster-config/openshift-oauth
+  - ../../../cluster-config/openshift-oauth/overlays/sno
   - ../../../cluster-config/groups-and-membership
   # - ../../../cluster-config/cost-management/operator
   # - ../../../cluster-config/cost-management/instance
