--- a/gitops/cluster-config/openshift-ingress/base/ingress-controller.yaml
+++ b/gitops/cluster-config/openshift-ingress/base/ingress-controller.yaml
@@ -8,4 +8,4 @@ metadata:
     argocd.argoproj.io/sync-options: Validate=false,ServerSideApply=true
 spec:
   defaultCertificate:
-    name: apps-wildcard-certificate
+    name: apps-wildcard-cert
