--- a/gitops/cluster-config/image-registry/image-registry-config.yaml
+++ b/gitops/cluster-config/image-registry/image-registry-config.yaml
@@ -7,6 +7,7 @@ metadata:
   name: cluster
 spec:
   managementState: Managed
+  rolloutStrategy: Recreate
   replicas: 1
   storage:
     managementState: Managed
