--- a/gitops/cluster-config/image-registry/image-registry-config.yaml
+++ b/gitops/cluster-config/image-registry/image-registry-config.yaml
@@ -9,6 +9,7 @@ spec:
   managementState: Managed
   rolloutStrategy: Recreate
   replicas: 1
+  defaultRoute: true
   storage:
     managementState: Managed
     pvc:
