Update for ingress

--- a/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ../../../cluster-config/custom-roles
   - ../../../cluster-config/external-secrets-operator
   - ../../../cluster-config/cert-manager
+  - ../../../cluster-config/openshift-ingress/overlays/sno
   - ../../../cluster-config/openshift-gitops/cluster
   - ../../../cluster-config/openshift-storage/operator
   - ../../../cluster-config/openshift-storage/mcg
