--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/dynamic-plugins-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/dynamic-plugins-rhdh.yaml
@@ -9,7 +9,7 @@ data:
     includes:
       - dynamic-plugins.default.yaml
     plugins:
-      - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-redhat-argocd
         disabled: false
       - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd-backend-dynamic
         disabled: false
@@ -26,6 +26,8 @@ data:
       - package: ./dynamic-plugins/dist/backstage-plugin-azure-devops 
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-azure-devops-backend-dynamic 
+        disabled: false
+      - package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-azure-dynamic 
         disabled: false
       # - package: ./dynamic-plugins/dist/parfuemerie-douglas-scaffolder-backend-module-azure-repositories
       #   disabled: false
