Dynamic plugins cache

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
@@ -18,5 +18,15 @@ spec:
     replicas: 1
     route:
       enabled: true
+  deployment:
+    patch:
+      spec:
+        template:
+          spec:
+            volumes:
+              - $patch: replace
+                name: dynamic-plugins-root
+                persistentVolumeClaim:
+                  claimName: dynamic-plugins-root
   database:
     enableLocalDb: true
