--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -63,7 +63,7 @@ data:
 
     azureDevOps:
       host: dev.azure.com
-      token: ${PERSONAL_ACCESS_TOKEN}
+      # token: ${PERSONAL_ACCESS_TOKEN}
       organization: pittar-demos
 
     integrations:
