--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
@@ -15,6 +15,7 @@ spec:
       secrets:
         - name: rhdh-secrets
         - name: ado-secrets
+        - name: rhsso-secret
     replicas: 1
     route:
       enabled: true
