--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -80,12 +80,12 @@ data:
           credentials:
             - personalAccessToken: ${PERSONAL_ACCESS_TOKEN}
 
-    catalog:
-      rules:
-        - allow: [Component, System, Group, Resource, Location, Template, API]
-      locations:
-        - type: url
-          target: https://dev.azure.com/pittar-demos/rhdh-demo/_git/software-templates?path=/showcase-templates.yaml
+    # catalog:
+    #   rules:
+    #     - allow: [Component, System, Group, Resource, Location, Template, API]
+    #   locations:
+    #     - type: url
+    #       target: https://dev.azure.com/pittar-demos/rhdh-demo/_git/software-templates?path=/showcase-templates.yaml
 
     auth:
       environment: production
@@ -104,18 +104,23 @@ data:
     signInPage: oidc
 
     catalog:
-     providers:
-       keycloakOrg:
-         default:
-           baseUrl: ${KEYCLOAK_BASE_URL}
-           loginRealm: ${KEYCLOAK_REALM}
-           realm: ${KEYCLOAK_REALM}
-           clientId: ${KEYCLOAK_CLIENT_ID}
-           clientSecret: ${KEYCLOAK_CLIENT_SECRET}
-           schedule:
-            frequency: { minutes: 1 }
-            timeout: { minutes: 1 }
-            initialDelay: { seconds: 15 }
+      rules:
+        - allow: [Component, System, Group, Resource, Location, Template, API]
+      locations:
+        - type: url
+          target: https://dev.azure.com/pittar-demos/rhdh-demo/_git/software-templates?path=/showcase-templates.yaml
+      providers:
+        keycloakOrg:
+          default:
+            baseUrl: ${KEYCLOAK_BASE_URL}
+            loginRealm: ${KEYCLOAK_REALM}
+            realm: ${KEYCLOAK_REALM}
+            clientId: ${KEYCLOAK_CLIENT_ID}
+            clientSecret: ${KEYCLOAK_CLIENT_SECRET}
+            schedule:
+              frequency: { minutes: 1 }
+              timeout: { minutes: 1 }
+              initialDelay: { seconds: 15 }
 
 
     backend:
